# 2026vscode

./: .gitignore  .mxproject  06-1_STM32U575_USART_Printf.ioc  CMakeLists.txt  硬件配置文档.md
APP/tasks/: dht11_task.c  dht11_task.h  led_task.c  led_task.h  mpu6050_task.c  mpu6050_task.h  oled_task.c  oled_task.h  sg90_task.c  sg90_task.h  w25q64_task.c  w25q64_task.h
Core/Inc/: FreeRTOSConfig.h  main.h  stm32u5xx_it.h
Core/Src/: app_freertos.c  gpdma.c  gpio.c  i2c.c  main.c  spi.c  stm32u5xx_hal_msp.c  stm32u5xx_hal_timebase_tim.c  stm32u5xx_it.c  tim.c  usart.c
Hardware/DHT11/: dht11.c  dht11.h
Hardware/LightSensor/: light_sensor_pa3.c  light_sensor_pa3.h
Hardware/MPU6050/: driver_mpu6050.c  driver_mpu6050.h
Hardware/OLED/: ascii_font.c  driver_oled.c  driver_oled.h
Hardware/SG90/: sg90.c  sg90.h
Hardware/W25Q64/: driver_w25q64.c  driver_w25q64.h
cmake/stm32cubemx/: CMakeLists.txt
